--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,16 +8,13 @@ builds:
       - linux
       - darwin
     goarch:
+      - "386"
       - amd64
       - arm64
     ldflags:
-      # the following line will inject the current git tag in the binary during the build process.
-      # .Version are template variables that will be set during the GoReleaser run
-      # The "-X" go flag injects the strings into the two global variables GitCommit and Version
       # See also: https://pkg.go.dev/cmd/link
       - -s
       - -w
-      - -X github.com/openshift/backplane-tools/pkg/utils.Version={{.Version}}
       - "-extldflags=-zrelro" # binary hardening: For further explanation look here: https://www.redhat.com/en/blog/hardening-elf-binaries-using-relocation-read-only-relro
       - "-extldflags=-znow"
 
@@ -31,8 +28,7 @@ archives:
       {{- else }}{{ .Arch }}{{ end}}
 
 checksum:
-  name_template: 'sha256sum.txt'
-  algorithm: sha256
+  name_template: "checksums.txt"
 
 snapshot:
   name_template: "{{ .Tag }}-next"
