--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,8 +24,7 @@ archives:
       {{ .ProjectName }}_
       {{- .Version }}_
       {{- .Os }}_
-      {{- if eq .Arch "amd64" }}x86_64
-      {{- else }}{{ .Arch }}{{ end}}
+      {{ .Arch }}
 
 checksum:
   name_template: "checksums.txt"
