--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,7 +24,7 @@ archives:
       {{ .ProjectName }}_
       {{- .Version }}_
       {{- .Os }}_
-      {{ .Arch }}
+      {{- .Arch }}
 
 checksum:
   name_template: "checksums.txt"
